infer/tests/codetoanalyze/objc/errors/frontend/block_no_args.m
../../frontend/block/block_no_args.m